# TerraMath-LeviLauncroidMod

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
.github/workflows/: build.yml
assets/: terramath.json
docs/: BUILD.md  CONVERSION_REPORT.md  FEATURE_PARITY.md  HOOK_ANALYSIS.md  NBT_ANALYSIS.md  RENDERING_REPORT.md  SIGNATURE_ANALYSIS.md  TROUBLESHOOTING.md
src/: Main.cpp
src/config/: Config.cpp  Config.h
src/hook/: AutoResolver.cpp  AutoResolver.h  EglHook.cpp  Hooks.h  InputHook.cpp  ResolverConfig.h  TerrainHook.cpp
src/math/: Expr.cpp  Expr.h  MathFunctions.cpp  MathFunctions.h  Noise.cpp  Noise.h
src/terrain/: FormulaEngine.cpp  FormulaEngine.h  Presets.h  TerrainSettings.h
src/ui/: ConfigUI.cpp  ConfigUI.h  ImGuiManager.cpp  ImGuiManager.h
src/util/: Log.h
tests/: test_formula.cpp
